--- a/content/privacy-policy/index.mdx
+++ b/content/privacy-policy/index.mdx
@@ -1,92 +1,92 @@
 ---
-title: Sucari Tech Privacy Policy
-description: Learn how we use the information you provide to Sucari Tech
+title: Sucari Tech Política de Privacidad
+description: Conozca cómo utilizamos la información que proporciona a Sucari Tech
 keywords:
-  - Software Development Enterprise
-  - Software development
+  - Empresa de Desarrollo de Software
+  - Desarrollo de Software
 header:
   link:
-    label: Back to home
+    label: Volver al Inicio
     to: /
 ---
 
-# Privacy Policy
+# Política de Privacidad
 
-## Index
+## Índice
 
-- [Personal information we collect](#)
-- [How we use your personal information](#)
-- [How we share your personal information](#)
-- [Children](#)
-- [How to contact us](#)
+- [Información personal que recopilamos](#)
+- [Cómo usamos tu información personal](#)
+- [Cómo compartimos su información personal](#)
+- [Niños](#)
+- [Cómo contactarnos](#)
 
-## Personal information we collect
+## Información personal que recopilamos
 
-### Information you provide to us
+### Información que nos proporciona
 
-Personal information you may provide to us includes:
+La información personal que puede proporcionarnos incluye:
 
-- **Contact details**, such as your first and last name, email, phone number and company name.
-- **Communications** that we exchange with you, including when you contact us with questions, feedback, or otherwise.
+- **Detalles de contacto**, como su nombre y apellido, correo electrónico, teléfono y nombre de empresa.
+- **Comunicaciones** que intercambiamos con usted, incluso cuando se comunica con nosotros con preguntas, comentarios u otros.
 
-### Third party sources
+### Fuentes de terceros
 
-We may combine personal information we receive from you with personal information we obtain from other sources, such as:
+Podemos combinar la información personal que recibimos de usted con la información personal que obtenemos de otras fuentes, como:
 
-- Data providers, such as information services and data licensors.
+- Proveedores de datos, como servicios de información y licenciantes de datos.
 
-- Public sources, such as social media platforms.
+- Fuentes públicas, como plataformas de redes sociales.
 
-- Marketing partners, such as companies that have entered into joint marketing relationships with us.
+- Socios de marketing, como empresas que han establecido relaciones de marketing conjuntas con nosotros.
 
-## How we use your personal information
+## Cómo usamos tu información personal
 
-We use your personal information for the following purposes or as otherwise described at the time of collection:
+Usamos su información personal para los siguientes propósitos o como se describe de otra manera en el momento de la recopilación:
 
-### Service delivery
+### Prestación de servicios
 
-We use your personal information to:
+Usamos su información personal para:
 
-- Provide, operate and improve the service and our business.
+- Proporcionar, operar y mejorar el servicio y nuestra empresa.
 
-- Complete transactions with you.
+- Completar transacciones con usted.
 
-- Communicate with you about the service, including by sending announcements, updates, security alerts, and support and administrative messages.
+- Comunicarnos con usted sobre el servicio, incluido el envío de anuncios, actualizaciones, alertas de seguridad y mensajes administrativos y de soporte.
 
-- Understand your needs and interests, and personalize your experience with the service and our communications.
+- Comprender sus necesidades e intereses, y personalizar su experiencia con el servicio y nuestras comunicaciones.
 
-- Provide support for the service, respond to your requests, questions and feedback.
+- Proporcionar soporte para el servicio, responder a sus solicitudes, preguntas y comentarios.
 
-### Compliance and protection
+### Cumplimiento y protección
 
-We may use your personal information to:
+Podemos utilizar su información personal para:
 
-- Comply with applicable laws, lawful requests, and legal process, such as to respond to subpoenas or requests from government authorities.
+- Cumplir con las leyes aplicables, solicitudes legales y procesos legales, como para responder a citaciones o solicitudes de autoridades gubernamentales.
 
-- Protect our, your or others’ rights, privacy, safety or property (including by making and defending legal claims).
+- Proteger nuestros derechos, la privacidad, la seguridad o la propiedad, los suyos o los de otros (incluso mediante la presentación y defensa de reclamos legales).
 
-- Audit our internal processes for compliance with legal and contractual requirements and internal policies.
+- Auditar nuestros procesos internos para el cumplimiento de los requisitos legales y contractuales y las políticas internas.
 
-- Enforce the terms and conditions that govern the service.
+- Hacer cumplir los términos y condiciones que rigen el servicio.
 
-- Prevent, identify, investigate and deter fraudulent, harmful, unauthorized, unethical or illegal activity, including cyberattacks and identity theft.
+- Prevenir, identificar, investigar y disuadir actividades fraudulentas, dañinas, no autorizadas, poco éticas o ilegales, incluidos los ataques cibernéticos y el robo de identidad.
 
-## How we share your personal information
+## Cómo compartimos su información personal
 
-We may share your personal information with the following parties and as otherwise described in this Privacy Policy or at the time of collection:
+Podemos compartir su información personal con las siguientes partes y como se describe en esta Política de privacidad o en el momento de la recopilación:
 
 ### Professional advisors
 
 Professional advisors, such as lawyers, auditors, bankers and insurers, where necessary in the course of the professional services that they render to us.
 
-### Authorities and others
+### Autoridades y otros
 
-Law enforcement, government authorities, and private parties, as we believe in good faith to be necessary or appropriate for the [compliance and protection](#) purposes described above.
+Cumplimiento de la ley, autoridades gubernamentales y partes privadas, según creamos de buena fe que es necesario o apropiado para los propósitos del [cumplimiento y protección](#) descritos anteriormente.
 
-## Children
+## Niños
 
-The Service is not intended for use by children under 16 years of age. If we learn that we have collected personal information through the service from a child under 16 without the consent of the child’s parent or guardian as required by law, we will delete it.
+El Servicio no está destinado a ser utilizado por niños menores de 16 años. Si nos enteramos de que hemos recopilado información personal a través del servicio de un niño menor de 16 años sin el consentimiento del padre o tutor del niño según lo exige la ley, la eliminaremos.
 
-## How to contact us
+## Cómo contactarnos
 
-You can reach us by email at info@sucari.tech
+Puede comunicarse con nosotros por correo electrónico a info@sucari.tech
