translated privacy policy lines

--- a/content/privacy-policy/index.mdx
+++ b/content/privacy-policy/index.mdx
@@ -75,9 +75,9 @@ Podemos utilizar su información personal para:
 
 Podemos compartir su información personal con las siguientes partes y como se describe en esta Política de privacidad o en el momento de la recopilación:
 
-### Professional advisors
+### Asesores profesionales
 
-Professional advisors, such as lawyers, auditors, bankers and insurers, where necessary in the course of the professional services that they render to us.
+Asesores profesionales, tales como abogados, auditores, banqueros y aseguradores, cuando sea necesario en el curso de los servicios profesionales que nos prestan.
 
 ### Autoridades y otros
 
