fixing title format

--- a/content/privacy-policy/index.mdx
+++ b/content/privacy-policy/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sucari Tech Política de Privacidad
+title: Sucari Tech - Política de Privacidad
 description: Conozca cómo utilizamos la información que proporciona a Sucari Tech
 keywords:
   - Empresa de Desarrollo de Software
